<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/quizIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:src="@drawable/quiz" />

    <TextView
        android:id="@+id/choseTopic"
        android:layout_marginTop="20dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quizIcon"
        android:textColor="#FFFFFF"
        android:text="@string/choose_quiz_2"
        />

    <TextView
        android:id="@+id/currentUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/choseTopic"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- начала 1 линии-->
            <LinearLayout
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2">
                <!-- начала кыргызстан-->
                <LinearLayout
                    android:id="@+id/kgzLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_back_white10"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/kgz" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/quiz_name_1"
                        android:textColor="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <!-- начала география-->
                <!--  <LinearLayout
                      android:id="@+id/globusLayout"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:padding="20dp"
                      android:layout_marginStart="5dp"
                      android:background="@drawable/round_back_white10">
                      <ImageView
                          android:layout_width="80dp"
                          android:layout_height="80dp"
                          android:src="@drawable/globus"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="8dp"
                          android:text="@string/quiz_name_2"
                          android:textColor="#CC000000"
                          android:textSize="18sp"
                          android:textStyle="bold"/>
                  </LinearLayout>-->
              </LinearLayout>
              <!-- начала 2 линии-->
            <LinearLayout
                android:id="@+id/line_2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/line_1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2">
                <!-- начала спрот-->
                <LinearLayout
                    android:id="@+id/sportLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_back_white10">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/sport"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/quiz_name_3"
                        android:textColor="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <!-- начала жава-->
                <LinearLayout
                    android:id="@+id/javaLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/round_back_white10">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/java"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/quiz_name_4"
                        android:textColor="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>
            <!-- начала 3 линии-->
            <LinearLayout
                android:id="@+id/line_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2">
                <!-- начала кыргызстан-->
                <LinearLayout
                    android:id="@+id/usa_layuot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_back_white10">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/usa"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="USA"
                        android:textColor="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <!-- начала география-->
                <LinearLayout
                    android:id="@+id/basket_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/round_back_white10">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/basket"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="баскетбол"
                        android:textColor="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <!-- начала 4 линии-->
            <LinearLayout
                android:id="@+id/line_4"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/line_1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2">
                <!-- начала спрот-->
                <LinearLayout
                    android:id="@+id/footbal_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_back_white10">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/footbal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Футбол"
                        android:textColor="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <!-- начала жава-->
                <LinearLayout
                    android:id="@+id/c_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/round_back_white10">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/c" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="c++"
                        android:textColor="#CC000000"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>
            <!--konec 4 lini -->


        </LinearLayout>
    </ScrollView>



    <!-- начала кнопка начать викторину-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_quiz"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/round_back_green20"
        android:layout_alignParentBottom="true"/>

    <!-- новая кнопка выхода -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выход"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@+id/currentUser"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
